--- a/orgin/homepage.html
+++ b/orgin/homepage.html
@@ -13,11 +13,11 @@
     <div class="wrapper">
         <div class="nav">
             <div class="logo">
-                <h4>MetaMinds.</h4>
+                <h4>MetaMinds</h4>
             </div>
             <div class="links">
                 <a href="#" class="mainlink">Home</a>
-                <a href="#">Help</a>
+                <a href="#">Help!</a>
                 <a href="#">About</a>
                 <a href="#">Contact</a>
             </div>
@@ -85,8 +85,7 @@
                     <div class="cardbgone"></div>
                     <div class="cardContent">
                         <h2>Real-time Emotion Understanding</h2>
-                        <p>Empowering individuals with Down syndrome to better comprehend and interpret others' emotions through our innovative real-time camera technology.</p>
-               
+                        <p>Empowering individuals with Down syndrome to understand emotions using our innovative camera tech.</p>
                         <a href="facemo/3-emotioncam.html">
                             <div class="cardBtn">
                                 <img src="img/next.png" alt="" class="cardIcon">
@@ -98,9 +97,9 @@
                     <img src="img/learn.png" class="cardtwoImg" alt="" data-aos="fade-up" data-aos-duration="1200">
                     <div class="cardbgtwo"></div>
                     <div class="cardContent">
-                        <h2>Social Interaction</h2>
-                        <p>Promoting meaningful social connections and interactions for individuals with Down syndrome through engaging activities and virtual connections.</p>
-                        <a href="#">
+                        <h2>Real-time Emotion Understanding(Kids)</h2>
+                        <p>"Explore emotions with our interactive app for kids with Down syndrome. Join us in creating a more connected and empowered future!"</p>
+                        <a href="facemo/5-hatmagic.html">
                             <div class="cardBtn">
                                 <img src="img/next.png" alt="" class="cardIcon">
                             </div>
