--- a/orgin/facemo/3-emotioncam.html
+++ b/orgin/facemo/3-emotioncam.html
@@ -6,11 +6,13 @@
         <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@2.4.0/dist/tf.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/face-landmarks-detection@0.0.1/dist/face-landmarks-detection.js"></script>
         <style>
-            #output {
-                transform: scaleX(-1); /* Mirror video */
-                border: 2px solid #409de8;
-                background-color: #ffffff;
-            }
+           #output {
+    transform: scaleX(-1); /* Mirror video */
+    border: 2px solid #409de8;
+    background-color: #ffffff;
+    margin-top: 100px; /* Adjust the margin as needed */
+}
+
     
             #status {
                 text-align: center;
