--- a/orgin/facemo/5-hatmagic.html
+++ b/orgin/facemo/5-hatmagic.html
@@ -9,6 +9,7 @@
                 transform: scaleX(-1); /* Mirror video */
                 border: 2px solid #409de8;
                 background-color: #ffffff;
+                margin-top: 100px; /* Adjust the margin as needed */
             }
     
             #status {
