--- a/orgin/homepage.html
+++ b/orgin/homepage.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
     <div class="wrapper">
@@ -83,26 +84,24 @@
                 <div class="card one" data-aos="fade-up" data-aos-duration="1000">
                     <img src="img/videocall.png" class="cardoneImg" alt="" data-aos="fade-up" data-aos-duration="1100">
                     <div class="cardbgone"></div>
-                    <div class="cardContent">
+                    <div class="cardContent" style="text-align: right;">
                         <h2>Real-time Emotion Understanding</h2>
                         <p>Empowering individuals with Down syndrome to understand emotions using our innovative camera tech.</p>
                         <a href="facemo/3-emotioncam.html">
-                            <div class="cardBtn">
-                                <img src="img/next.png" alt="" class="cardIcon">
-                            </div>
+                            <button type="button" class="btn btn-info">Try !</button>
                         </a>
                     </div>
+                    
                 </div>
                 <div class="card two" data-aos="fade-up" data-aos-duration="1300">
-                    <img src="img/learn.png" class="cardtwoImg" alt="" data-aos="fade-up" data-aos-duration="1200">
+                    <img src="img/learn.png" class="cardtwoImg" alt="" data-aos="fade-up" data-aos-duration="1200" style="position: relative; left: -20px;">
                     <div class="cardbgtwo"></div>
-                    <div class="cardContent">
+                    <div class="cardContent" style="text-align: right;">
                         <h2>Real-time Emotion Understanding(Kids)</h2>
                         <p>"Explore emotions with our interactive app for kids with Down syndrome. Join us in creating a more connected and empowered future!"</p>
                         <a href="facemo/5-hatmagic.html">
-                            <div class="cardBtn">
-                                <img src="img/next.png" alt="" class="cardIcon">
-                            </div>
+                            <button type="button" class="btn btn-info">Try !</button>
+
                         </a>
                     </div>
                 </div>
